force-app/main/default/objects/Request__c/fields/Churn_Protection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Protection_Reason__c</fullName>
    <description>MIS-775</description>
    <label>Churn Protection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal more than 7 days late, incl. extension &amp; backdating</fullName>
            </value>
            <value>
                <fullName>Account transitioned 90 days prior to renewal due to a rep leaving the company</fullName>
            </value>
            <value>
                <fullName>Accounts transition to NT</fullName>
            </value>
            <value>
                <fullName>The purchased product is no longer supported</fullName>
            </value>
            <value>
                <fullName>Other - All other churn protection requests outside of this list - must go through special approval process</fullName>
            </value>
            <value>
                <fullName>$5K ARR Accounts / Serengeti Sunset</fullName>
                <isActive>false</isActive>
                <label>$5K ARR Accounts / Serengeti Sunset</label>
            </value>
            <value>
                <fullName>Accounts transitioned to the rep less than 90 days prior renewal date</fullName>
                <isActive>false</isActive>
                <label>Accounts transitioned to the rep less than 90 days prior renewal date</label>
            </value>
            <value>
                <fullName>Debooking</fullName>
                <isActive>false</isActive>
                <label>Debooking</label>
            </value>
            <value>
                <fullName>Merges (in cases where there was no loss of ARR)</fullName>
                <isActive>false</isActive>
                <label>Merges (in cases where there was no loss of ARR)</label>
            </value>
            <value>
                <fullName>Product Change - Small Sites / Popular Pages</fullName>
                <isActive>false</isActive>
                <label>Product Change - Small Sites / Popular Pages</label>
            </value>
            <value>
                <fullName>Renewals 7+ days late, including extension and backdated contract</fullName>
                <isActive>false</isActive>
                <label>Renewals 7+ days late, including extension and backdated contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>