force-app/main/default/objects/Request__c/fields/Client_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Client_Competitors__c</fullName>
    <label>Client Competitors</label>
    <type>TextArea</type>
</CustomField>