force-app/main/default/objects/Request__c/fields/Client_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Client_Meeting__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Client Meeting</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>