force-app/main/default/objects/Request__c/fields/Client_Meeting_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Client_Meeting_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Meeting Scheduled</label>
    <type>Checkbox</type>
</CustomField>