force-app/main/default/objects/Request__c/fields/Closed_lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_lost_Reason__c</fullName>
    <description>MIS-5079</description>
    <label>Closed lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>