force-app/main/default/objects/Request__c/fields/Closed_Won_Lost_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Lost_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-7445</description>
    <inlineHelpText>A Churn Protection request must be linked to a Closed Won or Closed Lost opportunity.</inlineHelpText>
    <label>Closed Won/Lost Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>A Churn Protection request must be linked to a Closed Won or Closed Lost opportunity.</errorMessage>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, Closed Lost</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Requests (Closed Won/Lost Opportunity)</relationshipLabel>
    <relationshipName>Churn_Protection_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>