force-app/main/default/objects/Request__c/fields/Cloud_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Estimated_Cost__c</fullName>
    <description>MIS-4438</description>
    <label>Cloud Estimated Cost ($)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>