force-app/main/default/objects/Request__c/fields/Collateral_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Deployment__c</fullName>
    <description>MIS-4200</description>
    <label>Collateral Deployment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>