force-app/main/default/objects/Request__c/fields/Collateral_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Deployment_Date__c</fullName>
    <description>MIS-4200</description>
    <label>Collateral Deployment Date</label>
    <type>Date</type>
</CustomField>