force-app/main/default/objects/Request__c/fields/Completed_Cancelled_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Completed_Cancelled_TimeStamp__c</fullName>
    <label>Completed/Cancelled TimeStamp</label>
    <type>Date</type>
</CustomField>