force-app/main/default/objects/Request__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <description>MIS-1640</description>
    <label>Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low complex - 1 week</fullName>
            </value>
            <value>
                <fullName>Medium complex - 2 weeks</fullName>
            </value>
            <value>
                <fullName>High complex - 3 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>