force-app/main/default/objects/Request__c/fields/Consulting_price__c.field-meta.xml
<CustomField>
    <fullName>Consulting_price__c</fullName>
    <description>MIS-3796 - changed field label
MIS-2399</description>
    <formula>(ASC_AS_Consultant_effort__c + ASDE_effort__c)*2500</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Includes both ASC and ASDE days</inlineHelpText>
    <label>Workload Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>