force-app/main/default/objects/Request__c/fields/ContactRelated__c.field-meta.xml
<CustomField>
    <fullName>ContactRelated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactRelated</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must choose a contact related to the account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>