force-app/main/default/objects/Request__c/fields/Contract_attached_to_the_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Contract_attached_to_the_opportunity__c</fullName>
    <description>Did you attach a contract to the opportunity?</description>
    <label>Contract attached to the opportunity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>This is a CC or Wire account</fullName>
            </value>
            <value>
                <fullName>There is no contract yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>