force-app/main/default/objects/Request__c/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <inlineHelpText>For new sale and co-term upsell - Subscription Start Date. 
For Renewals - Next Renewal Date</inlineHelpText>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>