force-app/main/default/objects/Request__c/fields/Contract_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Contract_Exceptions__c</fullName>
    <label>Contract Exceptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indemnity</fullName>
            </value>
            <value>
                <fullName>Limitation of Liability</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Logo Rights</fullName>
            </value>
            <value>
                <fullName>License Scope</fullName>
            </value>
            <value>
                <fullName>Governing Law</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>SLA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>