force-app/main/default/objects/Request__c/fields/Contracting_Address__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Address__c</fullName>
    <description>#1113520</description>
    <formula>IF(LEN(Account__r.BillingStreet)&gt;0, Account__r.BillingStreet &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
IF(LEN(Account__r.BillingCity)&gt;0, Account__r.BillingCity &amp; &quot;, &quot; , &quot;&quot; )&amp;
IF(LEN(Account__r.BillingState)&gt;0, Account__r.BillingState &amp; &quot; &quot; , &quot;&quot; )&amp;
IF(LEN(Account__r.BillingPostalCode)&gt;0, Account__r.BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
IF(LEN(Account__r.BillingCountry) &gt;0, Account__r.BillingCountry,&quot;&quot;)</formula>
    <inlineHelpText>Make sure that the address is fully updated</inlineHelpText>
    <label>Contracting Address</label>
    <type>Text</type>
</CustomField>