force-app/main/default/objects/Request__c/fields/Country_Filters__c.field-meta.xml
<CustomField>
    <fullName>Country_Filters__c</fullName>
    <label>Country Filters</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>