force-app/main/default/objects/Request__c/fields/Country_Tier__c.field-meta.xml
<CustomField>
    <fullName>Country_Tier__c</fullName>
    <description>MIS-5318</description>
    <formula>Account__r.Country_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>