force-app/main/default/objects/Request__c/fields/Country_to_study__c.field-meta.xml
<CustomField>
    <fullName>Country_to_study__c</fullName>
    <inlineHelpText>Please list all countries for which analysis is expected</inlineHelpText>
    <label>Countries or regions to study</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>