force-app/main/default/objects/Request__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>MIS-775</description>
    <label>Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Push to NT</fullName>
            </value>
            <value>
                <fullName>Customer elects churn to NT</fullName>
            </value>
            <value>
                <fullName>Downsold to NT Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>