force-app/main/default/objects/Request__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>#1113520</description>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>