force-app/main/default/objects/Request__c/fields/Current_Way_of_Solving__c.field-meta.xml
<CustomField>
    <fullName>Current_Way_of_Solving__c</fullName>
    <label>Current Way of Solving</label>
    <type>TextArea</type>
</CustomField>