force-app/main/default/objects/Request__c/fields/Custom_Dashboard_Revisions__c.field-meta.xml
<CustomField>
    <fullName>Custom_Dashboard_Revisions__c</fullName>
    <label>Custom Dashboard Revisions (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>