force-app/main/default/objects/Request__c/fields/Custom_Standard__c.field-meta.xml
<CustomField>
    <fullName>Custom_Standard__c</fullName>
    <description>MIS-2334</description>
    <label>Custom/Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>