force-app/main/default/objects/Request__c/fields/Customer_email__c.field-meta.xml
<CustomField>
    <fullName>Customer_email__c</fullName>
    <inlineHelpText>if not existing billing email</inlineHelpText>
    <label>Billing Email</label>
    <type>Email</type>
</CustomField>