force-app/main/default/objects/Request__c/fields/Customer_Full_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Full_Legal_Name__c</fullName>
    <inlineHelpText>Including &quot;Inc.&quot;, &quot;ltd.&quot; or other corporate form</inlineHelpText>
    <label>Customer Full Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>