force-app/main/default/objects/Request__c/fields/Customer_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Method__c</fullName>
    <label>Customer Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Other (Contract)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
                <isActive>false</isActive>
                <label>PayPal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>