force-app/main/default/objects/Request__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>IF(ISPICKVAL(Account__r.Status__c, &apos;Expired&apos;) || ISNULL(TEXT(Account__r.Status__c)), &apos;Potential&apos;, &apos;Existing&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>