force-app/main/default/objects/Request__c/fields/DaaS_Data_Sample__c.field-meta.xml
<CustomField>
    <fullName>DaaS_Data_Sample__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-7706</description>
    <label>DaaS Data Sample</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>