force-app/main/default/objects/Request__c/fields/DaaS_Product__c.field-meta.xml
<CustomField>
    <fullName>DaaS_Product__c</fullName>
    <description>MIS-4239</description>
    <label>DaaS Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Predefined Dataset Feed</fullName>
            </value>
            <value>
                <fullName>Flexible/Custom Dataset Feed</fullName>
            </value>
            <value>
                <fullName>API(Questions, Inquiry, Demo)</fullName>
            </value>
            <value>
                <fullName>One time - dataset delivery</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>