force-app/main/default/objects/Request__c/fields/DAAS_Scoping__c.field-meta.xml
<CustomField>
    <fullName>DAAS_Scoping__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DAAS Scoping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>