force-app/main/default/objects/Request__c/fields/Dashboard_Development_Time_Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Development_Time_Total_Time__c</fullName>
    <label>Dashboard Development Time (Total Time)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>