force-app/main/default/objects/Request__c/fields/Data_Feed_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Feed_Type__c</fullName>
    <label>Data Feed Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>42matters</fullName>
            </value>
            <value>
                <fullName>AI Prompts</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Buyer Intent / Intent Topics</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>GGS</fullName>
            </value>
            <value>
                <fullName>Keywords</fullName>
            </value>
            <value>
                <fullName>Lead enrichment</fullName>
            </value>
            <value>
                <fullName>Shopper Intelligence</fullName>
            </value>
            <value>
                <fullName>Stock Intelligence Mapping</fullName>
            </value>
            <value>
                <fullName>Technographics</fullName>
            </value>
            <value>
                <fullName>Ticker Mapping</fullName>
            </value>
            <value>
                <fullName>Ticker Mapping &amp; Performance feed</fullName>
            </value>
            <value>
                <fullName>User-level data</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>