force-app/main/default/objects/Request__c/fields/Data_Granularity__c.field-meta.xml
<CustomField>
    <fullName>Data_Granularity__c</fullName>
    <description>MIS-4239</description>
    <label>Data Granularity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>7-days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>