force-app/main/default/objects/Request__c/fields/Data_Pulls_of_API_Requests__c.field-meta.xml
<CustomField>
    <fullName>Data_Pulls_of_API_Requests__c</fullName>
    <label>Data Pulls (# of API Requests)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>