force-app/main/default/objects/Request__c/fields/Data_sets_price__c.field-meta.xml
<CustomField>
    <fullName>Data_sets_price__c</fullName>
    <description>MIS-2399</description>
    <formula>List_price__c - Consulting_price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data sets price ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>