force-app/main/default/objects/Request__c/fields/Data_Success_Taskforce__c.field-meta.xml
<CustomField>
    <fullName>Data_Success_Taskforce__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-3141
MIS-3354</description>
    <label>Data Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>