force-app/main/default/objects/Request__c/fields/Data_Validation__c.field-meta.xml
<CustomField>
    <fullName>Data_Validation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-7706</description>
    <label>Data Validation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>