force-app/main/default/objects/Request__c/fields/Datasets_Products__c.field-meta.xml
<CustomField>
    <fullName>Datasets_Products__c</fullName>
    <label>Investor Datasets Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referrals - Payments</fullName>
            </value>
            <value>
                <fullName>Referrals - B2B logins</fullName>
            </value>
            <value>
                <fullName>Referrals - Applicant Tracking</fullName>
                <label>Referrals - Applicant Tracking Growth</label>
            </value>
            <value>
                <fullName>Referrals - Shipping</fullName>
            </value>
            <value>
                <fullName>Referrals - Social</fullName>
            </value>
            <value>
                <fullName>Referrals - OTA/Metasearch</fullName>
                <label>Referrals - Metasearch</label>
            </value>
            <value>
                <fullName>Referrals - Financial marketplacses</fullName>
                <label>Referrals - Consumer Financial Marketplaces</label>
            </value>
            <value>
                <fullName>Search - Robinhood</fullName>
                <label>Search - Retail Trading</label>
            </value>
            <value>
                <fullName>Search - Amazon</fullName>
            </value>
            <value>
                <fullName>Search - Google</fullName>
            </value>
            <value>
                <fullName>Top products - Retail</fullName>
            </value>
            <value>
                <fullName>Traffic - Top Sites</fullName>
            </value>
            <value>
                <fullName>Search- Youtube</fullName>
                <isActive>false</isActive>
                <label>Search- Youtube</label>
            </value>
            <value>
                <fullName>Top products - Amazon</fullName>
                <isActive>false</isActive>
                <label>Top products - Amazon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>