force-app/main/default/objects/Request__c/fields/Date_according_to_the_complexity__c.field-meta.xml
<CustomField>
    <fullName>Date_according_to_the_complexity__c</fullName>
    <description>MIS-1640</description>
    <formula>IF(
ISPICKVAL(Complexity__c, &apos;Low complex - 1 week&apos;), NOW() + 7,
IF(
ISPICKVAL(Complexity__c, &apos;Medium complex - 2 weeks&apos;), NOW() + 14,
IF(
ISPICKVAL(Complexity__c, &apos;High complex - 3 weeks&apos;), NOW() + 21, null)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date according to the complexity</label>
    <type>Date</type>
</CustomField>