force-app/main/default/objects/Request__c/fields/Days_in_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Status__c</fullName>
    <formula>IF( ISNULL(Status_Change_TimeStamp__c),
TODAY()-DATEVALUE( CreatedDate ),
TODAY() - DATEVALUE( Status_Change_TimeStamp__c )
)</formula>
    <label>Days in Current Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>