force-app/main/default/objects/Request__c/fields/DD_Consultant__c.field-meta.xml
<CustomField>
    <fullName>DD_Consultant__c</fullName>
    <label>DD Consultant</label>
    <type>TextArea</type>
</CustomField>