force-app/main/default/objects/Request__c/fields/DDQ_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>DDQ_Prioritization__c</fullName>
    <description>MIS-962</description>
    <label>DDQ Prioritization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>