force-app/main/default/objects/Request__c/fields/Deadline_Urgency_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Urgency_Reason__c</fullName>
    <inlineHelpText>For example, a deadline to submit RFP</inlineHelpText>
    <label>Deadline Urgency Reason</label>
    <type>TextArea</type>
</CustomField>