force-app/main/default/objects/Request__c/fields/Deal_Desk_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-4360</description>
    <label>Deal Desk Contribution</label>
    <type>Checkbox</type>
</CustomField>