force-app/main/default/objects/Request__c/fields/Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size__c</fullName>
    <formula>Opportunity__r.Cycle_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>