force-app/main/default/objects/Request__c/fields/Deal_Size_ARR__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_ARR__c</fullName>
    <formula>Opportunity__r.Cycle_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>