force-app/main/default/objects/Request__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <description>MIS-5079</description>
    <formula>text(Opportunity__r.Type)</formula>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>