force-app/main/default/objects/Request__c/fields/Deck__c.field-meta.xml
<CustomField>
    <fullName>Deck__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deck</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>