force-app/main/default/objects/Request__c/fields/Dedicated_Training_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Training_Sessions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>1:1 training session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>