force-app/main/default/objects/Request__c/fields/Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Deliverable__c</fullName>
    <label>Deliverable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business Contract</fullName>
            </value>
            <value>
                <fullName>LOA to existing business</fullName>
            </value>
            <value>
                <fullName>NDA review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>