force-app/main/default/objects/Request__c/fields/Deliverable_Type__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Type__c</fullName>
    <label>Deliverable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actionable Insights Deck</fullName>
            </value>
            <value>
                <fullName>Advanced Analysis (ex:Excel)</fullName>
            </value>
            <value>
                <fullName>Custom Dashboard</fullName>
            </value>
            <value>
                <fullName>Custom Use Case Deck</fullName>
            </value>
            <value>
                <fullName>Digital Insights Analysis</fullName>
            </value>
            <value>
                <fullName>In-Person Meeting</fullName>
            </value>
            <value>
                <fullName>Insight Email</fullName>
            </value>
            <value>
                <fullName>Join a Call</fullName>
            </value>
            <value>
                <fullName>Strategic Insights Deck</fullName>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Excel File</fullName>
            </value>
            <value>
                <fullName>QBR Deck</fullName>
                <label>Long Deck</label>
            </value>
            <value>
                <fullName>General Insights Presentation</fullName>
            </value>
            <value>
                <fullName>Mini-Deck</fullName>
                <label>Short Deck</label>
            </value>
            <value>
                <fullName>PRO Dashboards</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>