force-app/main/default/objects/Request__c/fields/Delivered_to_Customer_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Delivered_to_Customer_TimeStamp__c</fullName>
    <label>Delivered to Customer TimeStamp</label>
    <type>Date</type>
</CustomField>