force-app/main/default/objects/Request__c/fields/Demo__c.field-meta.xml
<CustomField>
    <fullName>Demo__c</fullName>
    <defaultValue>&quot;0&quot;</defaultValue>
    <description>MIS-1842</description>
    <label>Demo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>