force-app/main/default/objects/Request__c/fields/Desired_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Desired_Outcome__c</fullName>
    <label>Desired Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Schedule a demo</fullName>
            </value>
            <value>
                <fullName>Present a QBR or Deck</fullName>
            </value>
            <value>
                <fullName>Build a Rapport (current or advanced negotiation stages)</fullName>
            </value>
            <value>
                <fullName>Expansion (get this circulating among a larger audience)</fullName>
            </value>
            <value>
                <fullName>Any sort of response! (lead or client has gone cold)</fullName>
            </value>
            <value>
                <fullName>Increased Usage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Create a new opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>