force-app/main/default/objects/Request__c/fields/Desired_Outcome_New_Choice__c.field-meta.xml
<CustomField>
    <fullName>Desired_Outcome_New_Choice__c</fullName>
    <label>Desired Outcome New Choice</label>
    <type>TextArea</type>
</CustomField>