force-app/main/default/objects/Request__c/fields/DetailedFeature_Product_Training__c.field-meta.xml
<CustomField>
    <fullName>DetailedFeature_Product_Training__c</fullName>
    <description>Detailed or Feature Group Product Training</description>
    <label>Detailed/Feature Product Training</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>