force-app/main/default/objects/Request__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Client Success Analysts Details: Time line of tracking link, etc.</description>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>