force-app/main/default/objects/Request__c/fields/Details_of_Deliverable__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Deliverable__c</fullName>
    <label>Details of Deliverable</label>
    <length>5500</length>
    <type>LongTextArea</type>
</CustomField>